<resources>
    <string name="app_name">StandConnect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="title_activity_detail_activity_container">DetailActivityContainer</string>
    <string name="title_activity_main_event_list">MainEventList</string>
    <string name="google_app_id">1090320560131-ml2scdc9pv75e07aiqrj80n0isvdn4mg.apps.googleusercontent.com</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_stand">Stands</string>
    <string name="title_business">Business</string>
    <string name="title_products">Products</string>
    <string name="title_event_map">Event Map</string>
    <string name="title_location">Stands Map</string>
    <string name="title_tags">Tags</string>
    <string name="title_profile">Profile</string>
    <string name="title_events_list">StandConnect</string>
    <string name="title_events_detail">Detail View</string>
    <string name="title_events_map">Map</string>

    <string name="title_name">Name</string>
    <string name="title_number">Number</string>
    <string name="title_description">Description</string>
    <string name="title_contact">Contact</string>
    <string name="title_phone">Phone</string>
    <string name="title_address">Address</string>

    <string name="title_product">Product</string>
    <string name="title_price">Price</string>

    <string name="title_start_scanning">Start Scanner</string>
    <string name="title_stop_scanning">Stop Scanner</string>

    <string name="title_age">Age</string>
    <string name="title_gender">Gender</string>
    <string name="title_city">City</string>
    <string name="title_zip">ZIP</string>
    <string name="title_email">Email</string>


</resources>
