<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Event">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_stand" android:icon="@mipmap/ic_store_black_48dp"
            android:title="@string/title_stand" />
        <item android:id="@+id/nav_business" android:icon="@mipmap/ic_business_white_48dp"
            android:title="@string/title_business" />
        <item android:id="@+id/nav_products" android:icon="@mipmap/ic_view_agenda_white_24dp"
            android:title="@string/title_products" />
        <item android:id="@+id/nav_events_map" android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/title_event_map" />
        <item android:id="@+id/nav_location" android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/title_location" />
        <item android:id="@+id/nav_tags" android:icon="@mipmap/ic_bookmark_white_48dp"
            android:title="@string/title_tags" />

    </group>
</item>
    <item android:title="@string/title_profile">
        <menu>
            <item android:id="@+id/nav_profile" android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/title_profile" />
        </menu>
    </item>

</menu>